<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:layout_width="match_parent"
    android:background="#F7F3C6"
    android:weightSum="1"
    android:isScrollContainer="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".17"
        android:layout_marginBottom="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingTop="10dp"
            android:paddingLeft="23dp"
            android:paddingRight="5dp"
            android:fadeScrollbars="false"
            android:layout_marginRight="30dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="10dp"
            android:isScrollContainer="false"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/childName"
                    android:textColor="#000000"
                    android:layout_marginBottom="-14dp"/>
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_marginBottom="14dp"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:id="@+id/tvCaregiverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/careGiveName"
                    android:paddingTop="5dp"
                    android:textColor="#000000"
                    android:layout_marginBottom="-14dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etFathername"
                    android:textSize="20dp"
                    android:layout_marginBottom="14dp"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:id="@+id/tvCaregiverNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/careGiverContact"
                    android:textColor="#000000"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="-14dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/etFathercontact"
                    android:textSize="20dp"
                    android:layout_marginBottom="14dp"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:id="@+id/tvHomeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homeAddress"
                    android:textColor="#000000"
                    android:paddingTop="4dp"
                    android:layout_marginBottom="-14dp"/>
                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:textSize="20dp"
                    android:layout_marginBottom="14dp"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:id="@+id/tvEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailAddress"
                    android:textColor="#000000"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="-14dp"/>
                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20dp"
                    android:layout_marginBottom="14dp"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:id="@+id/tvBloodGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bloodGroup"
                    android:textColor="#000000"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="-14dp"/>
                <Spinner
                    android:id="@+id/bloodgroup"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:paddingBottom="5dp"
        android:background="#f7e2ac"
        android:layout_marginTop="-10dp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/bSave"
            android:layout_marginTop="-12dp"
            android:layout_marginLeft="22dp"
            android:text="@string/txtSave"
            android:layout_marginBottom="5dp"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:textSize="14dp"
            android:background="#FFBEBCB6"/>
    </LinearLayout>
</LinearLayout>